Add shelters with pending apps in admin

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,15 @@ h2 {
   padding: 0px;
 
 }
+#section-pending {
+  font-family: Arial;
+  background-color: lightblue;
+  color: black;
+  text-align: left;
+  font-size: 20px;
+  padding: 0px;
+
+}
 * {
   box-sizing: border-box;
 }
