Add avg age for adoptable pets at a shelter

--- a/app/views/admin_shelters/show.html.erb
+++ b/app/views/admin_shelters/show.html.erb
@@ -3,3 +3,6 @@
 <%= @shelter.city %>
 <%= @shelter.state %>
 <%= @shelter.zip %><br>
+<section id="section-stats">
+  <p>Average Age of All Adoptable Pets: <%= @average_age_for_adoptable_pets %></p>
+</section>
