--- a/app/views/shelter_pets/new.html.erb
+++ b/app/views/shelter_pets/new.html.erb
@@ -1,14 +1,14 @@
-<%= form_tag "/shelters/#{@shelter.id}/pets" do %>
+<%= form_with url: "/shelters/#{@shelter.id}/pets", method: :post, local: true do |f|%>
   <h2>Create a New Pet</h2>
-  <%= label_tag :image%>
-  <%= text_field_tag :image %><br>
-  <%= label_tag :name %>
-  <%= text_field_tag :name %><br>
-  <%= label_tag :description%>
-  <%= text_field_tag :description %><br>
-  <%= label_tag :approximate_age %>
-  <%= text_field_tag :approximate_age %><br>
-  <%= label_tag :sex %>
-  <%= text_field_tag :sex%><br>
-  <%= submit_tag 'Create Pet' %>
+  <%= f.label :image%>
+  <%= f.text_field :image %><br>
+  <%= f.label :name %>
+  <%= f.text_field :name %><br>
+  <%= f.label :description%>
+  <%= f.text_field :description %><br>
+  <%= f.label :approximate_age %>
+  <%= f.text_field :approximate_age %><br>
+  <%= f.label :sex %>
+  <%= f.text_field :sex%><br>
+  <%= f.submit 'Create Pet' %>
 <% end %>
