--- a/app/views/shelters/edit.html.erb
+++ b/app/views/shelters/edit.html.erb
@@ -1,14 +1,14 @@
-<%= form_tag "/shelters/#{@shelter.id}", method: :patch do %>
+<%= form_with url: "/shelters/#{@shelter.id}", model: @shelter, method: :patch, local: true do |f|%>
   <h2>Edit <%= link_to "#{@shelter.name}", "shelters/#{@shelter.name}" %></h2>
-  <%= label_tag :name %>
-  <%= text_field_tag :name, @shelter.name %><br>
-  <%= label_tag :address %>
-  <%= text_field_tag :address, @shelter.address %><br>
-  <%= label_tag :city %>
-  <%= text_field_tag :city, @shelter.city %><br>
-  <%= label_tag :state %>
-  <%= text_field_tag :state, @shelter.state %><br>
-  <%= label_tag :zip %>
-  <%= text_field_tag :zip, @shelter.zip %><br>
-  <%= submit_tag "Update Shelter" %>
+  <%= f.label :name %>
+  <%= f.text_field :name%><br>
+  <%= f.label :address %>
+  <%= f.text_field :address%><br>
+  <%= f.label :city %>
+  <%= f.text_field :city%><br>
+  <%= f.label :state %>
+  <%= f.text_field :state%><br>
+  <%= f.label :zip %>
+  <%= f.text_field :zip %><br>
+  <%= f.submit "Update Shelter" %>
 <% end %>
