--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,14 +1,14 @@
-<%= form_tag '/shelters' do %>
+<%= form_with url: '/shelters', method: :post,local: true do |f| %>
   <h2>Create a New Shelter</h2>
-  <%= label_tag :name %>
-  <%= text_field_tag :name %><br>
-  <%= label_tag :address %>
-  <%= text_field_tag :address %><br>
-  <%= label_tag :city %>
-  <%= text_field_tag :city %><br>
-  <%= label_tag :state %>
-  <%= text_field_tag :state %><br>
-  <%= label_tag :zip %>
-  <%= text_field_tag :zip%><br>
-  <%= submit_tag 'Create Shelter' %>
+  <%= f.label :name %>
+  <%= f.text_field :name %><br>
+  <%= f.label :address %>
+  <%= f.text_field :address %><br>
+  <%= f.label :city %>
+  <%= f.text_field :city %><br>
+  <%= f.label :state %>
+  <%= f.text_field :state %><br>
+  <%= f.label :zip %>
+  <%= f.text_field :zip%><br>
+  <%= f.submit 'Create Shelter' %>
 <% end %>
