--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_with url:"/applications", method: :post, local: true do |form| %>
   <h2>Start an Application</h2>
   <%= form.label :first_name %>
-  <%= form.text_field :first_name %><br>
+  <%= form.text_field :first_name, required: true %><br>
   <%= form.label :last_name%>
-  <%= form.text_field :last_name %><br>
+  <%= form.text_field :last_name, required: true %><br>
   <%= form.label :address %>
   <%= form.text_field :address %><br>
   <%= form.label :city %>
