Add count of adoptable pets

--- a/app/views/admin_shelters/show.html.erb
+++ b/app/views/admin_shelters/show.html.erb
@@ -4,5 +4,6 @@
 <%= @shelter.state %>
 <%= @shelter.zip %><br>
 <section id="section-stats">
-  <p>Average Age of All Adoptable Pets: <%= @average_age_for_adoptable_pets %></p>
+  <p>Count of Adoptable Pets: <%= @shelter.count_of_adoptable_pets %>
+  <p>Average Age of All Adoptable Pets: <%= @shelter.average_age_for_adoptable_pets %></p>
 </section>
