--- a/app/views/admin_shelters/show.html.erb
+++ b/app/views/admin_shelters/show.html.erb
@@ -4,6 +4,7 @@
 <%= @shelter.state %>
 <%= @shelter.zip %><br>
 <section id="section-stats">
-  <p>Count of Adoptable Pets: <%= @shelter.count_of_adoptable_pets %>
   <p>Average Age of All Adoptable Pets: <%= @shelter.average_age_for_adoptable_pets %></p>
+  <p>Count of Adoptable Pets: <%= @shelter.count_of_adoptable_pets %>
+  <p>Count of Adopted Pets: <%= @shelter.count_of_adopted_pets %>
 </section>
