--- a/app/views/admin_applications/show.html.erb
+++ b/app/views/admin_applications/show.html.erb
@@ -1,5 +1,5 @@
 <h1>All Pets on Application</h1>
-<h3>Application Status: <%= @application.capitalized_status %></h3>
+<h3>Application Status: <%= @application.status.titleize %></h3>
 <% @application.application_pets.each do |application_pet| %>
   <section id="pet-<%=application_pet.pet.id%>">
     Pet: <%= application_pet.pet.name %>
@@ -11,17 +11,9 @@
       <% if application_pet.pet.approved_application? %>
       <p>Pet has been approved on another application.</p>
       <% else %>
-        <%= form_with url:"/admin/applications/#{@application.id}", method: :patch, local: true do |form| %>
-        <%= form.hidden_field :ap_id, value: "#{application_pet.id}" %>
-        <%= form.hidden_field :status, value: :approved %>
-        <%= form.submit 'Approve Pet' %>
-        <% end %>
+      <%= button_to("Approve Pet", "/admin/applications/#{@application.id}", method: :patch, params: {ap_id: application_pet.id, status: :approved}) %>
       <% end %>
-      <%= form_with url:"/admin/applications/#{@application.id}", method: :patch, local: true do |form| %>
-      <%= form.hidden_field :ap_id, value: "#{application_pet.id}" %>
-      <%= form.hidden_field :status, value: :rejected %>
-      <%= form.submit 'Reject Pet' %>
-      <% end %>
+      <%= button_to("Reject Pet", "/admin/applications/#{@application.id}", method: :patch, params: {ap_id: application_pet.id, status: :rejected}) %>
     <% end %>
   </section>
 <% end %>
