--- a/app/views/admin_shelters/show.html.erb
+++ b/app/views/admin_shelters/show.html.erb
@@ -1,8 +1,5 @@
 <h2><%= @shelter.name %></h2>
-<%= @shelter.address %>
-<%= @shelter.city %>
-<%= @shelter.state %>
-<%= @shelter.zip %><br>
+Full Address: <%= @shelter.full_address %></br>
 <section id="section-stats">
   <p>Average Age of All Adoptable Pets: <%= @shelter.average_age_for_adoptable_pets %></p>
   <p>Count of Adoptable Pets: <%= @shelter.count_of_adoptable_pets %>
