--- a/app/views/shelters/edit.html.erb
+++ b/app/views/shelters/edit.html.erb
@@ -1,14 +1,6 @@
-<%= form_with url: "/shelters/#{@shelter.id}", model: @shelter, method: :patch, local: true do |f|%>
-  <h2>Edit <%= link_to "#{@shelter.name}", "shelters/#{@shelter.name}" %></h2>
-  <%= f.label :name %>
-  <%= f.text_field :name%><br>
-  <%= f.label :address %>
-  <%= f.text_field :address%><br>
-  <%= f.label :city %>
-  <%= f.text_field :city%><br>
-  <%= f.label :state %>
-  <%= f.text_field :state%><br>
-  <%= f.label :zip %>
-  <%= f.text_field :zip %><br>
-  <%= f.submit "Update Shelter" %>
-<% end %>
+<h2>Edit <%= @shelter.name %></h2>
+
+<%= render partial: "form", locals: {path: "/shelters/#{@shelter.id}",
+                                    method_type: :patch,
+                                    button_text: 'Update Shelter',
+                                    model: @shelter}%>
