--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,14 +1,5 @@
-<%= form_with url: '/shelters', method: :post,local: true do |f| %>
-  <h2>Create a New Shelter</h2>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
-  <%= f.label :address %>
-  <%= f.text_field :address %><br>
-  <%= f.label :city %>
-  <%= f.text_field :city %><br>
-  <%= f.label :state %>
-  <%= f.text_field :state %><br>
-  <%= f.label :zip %>
-  <%= f.text_field :zip%><br>
-  <%= f.submit 'Create Shelter' %>
-<% end %>
+<h2>Create a New Shelter</h2>
+<%= render partial: "form", locals: {path: "/shelters",
+                                    method_type: :post,
+                                    button_text: 'Create Shelter',
+                                    model: Shelter.new}%>
