--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -29,13 +29,6 @@ Application Status: <%= @application.status.titleize %>
     <% end %>
   </section>
   <% if !@application.pets.empty? %>
-    <div id='submittion'>
-      <h3>Why I would make a good owner for these pet(s):</h3>
-        <%= form_with url:"/applications/#{@application.id}", method: :patch, local: true do |form| %>
-        <%= form.text_area :description%></br>
-        <%= form.hidden_field :status, value: :pending %>
-        <%= form.submit 'Submit' %>
-        <% end %>
-    </div>
+  <%= render partial: "submit", locals: {application_id: @application.id} %>
   <% end %>
 <% end %>
