--- a/app/views/shelter_pets/new.html.erb
+++ b/app/views/shelter_pets/new.html.erb
@@ -1,14 +1,5 @@
-<%= form_with url: "/shelters/#{@shelter.id}/pets", method: :post, local: true do |f|%>
-  <h2>Create a New Pet</h2>
-  <%= f.label :image%>
-  <%= f.text_field :image %><br>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
-  <%= f.label :description%>
-  <%= f.text_field :description %><br>
-  <%= f.label :approximate_age %>
-  <%= f.text_field :approximate_age %><br>
-  <%= f.label :sex %>
-  <%= f.text_field :sex%><br>
-  <%= f.submit 'Create Pet' %>
-<% end %>
+<%= render partial: "shared/pet_form", locals: {path: "/shelters/#{@shelter.id}/pets",
+                                    method_type: :post,
+                                    button_text: 'Create Pet',
+                                    model: Pet.new,
+                                    title: "Create a New Pet"}%>
