--- a/app/views/shared/_pet_form.html.erb
+++ b/app/views/shared/_pet_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: path, model: model, method: method_type,local: true do |f|%>
-  <h2>title</h2>
+  <h2><%= title %></h2>
   <%= f.label :image %>
   <%= f.text_field :image%><br>
   <%= f.label :name %>
